Remove calls with rendering intent